--- a/ecommerce/category/templates/category/all.html
+++ b/ecommerce/category/templates/category/all.html
@@ -1,5 +1,31 @@
 {% extends "category/base.html" %}
 
 {% block content %}
-    <h1>Show All Categories</h1>
+<div class="container mt-5">
+    <table class="table table-bordered">
+        <thead>
+            <tr class="bg-dark text-white">
+                <th scope="col">No</th>
+                <th scope="col">Name</th>
+                <th scope="col">Created At</th>
+                <th scope="col">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <a href="{% url 'cat-create' %}" class="btn btn-primary btn-sm text-white">Create<i class="fa fa-plus pl-2"></i></a>
+            {% for cat in cats %}
+            <tr>
+                <td>{{cat.id}}</td>
+                <td>{{cat.name}}</td>
+                <td>{{cat.created_at}}</td>
+                <td>
+                    <button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button>
+                    <button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button>
+                </td>
+            </tr>
+            {% endfor %}
+
+        </tbody>
+    </table>
+</div>
 {% endblock %}
