--- a/ecommerce/category/templates/category/create.html
+++ b/ecommerce/category/templates/category/create.html
@@ -1,5 +1,20 @@
 {% extends "category/base.html" %}
 
 {% block content %}
-<h1>Create Categories</h1>
+
+<div class="container my-5">
+    <h1 class="text-info text-center mb-5">Create Categories</h1>
+    <div class="col-md-6 offset-md-3">
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="email" class="form-control rounded-0" id="name">
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-sm float-right">Create</button>
+        </form>
+    </div>
+</div>
+
+
 {% endblock %}
