--- a/ecommerce/category/templates/category/all.html
+++ b/ecommerce/category/templates/category/all.html
@@ -8,16 +8,18 @@
                 <th scope="col">No</th>
                 <th scope="col">Name</th>
                 <th scope="col">Created At</th>
+                <th scope="col">Image</th>
                 <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
             <a href="{% url 'cat-create' %}" class="btn btn-primary btn-sm text-white">Create<i class="fa fa-plus pl-2"></i></a>
-            {% for cat in cats %}
+            {% for product in products %}
             <tr>
-                <td>{{cat.id}}</td>
-                <td>{{cat.name}}</td>
-                <td>{{cat.created_at}}</td>
+                <td>{{product.id}}</td>
+                <td>{{product.name}}</td>
+                <td>{{product.created_at}}</td>
+                <td><img src="{{product.image.url}}" alt=""></td>
                 <td>
                     <button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button>
                     <button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button>
