--- a/ecommerce/category/templates/category/all.html
+++ b/ecommerce/category/templates/category/all.html
@@ -18,7 +18,7 @@
             <tr>
                 <td>{{product.id}}</td>
                 <td>{{product.name}}</td>
-                <td>{{product.created_at}}</td>
+                <td>{{product.create_at}}</td>
                 <td><img src="{{product.image.url}}" alt=""></td>
                 <td>
                     <button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button>
